--- a/TODO
+++ b/TODO
@@ -1,1 +1,18 @@
 TODO список
+1.	Установить во вкладке Файл->Настройки->Расчеты
+Поиск основного тона		радиобокс 	Гц/% от частоты дискретизации
+Начальная частота   	[      ] Гц / % 
+Конечная частота     	[      ] Гц	 / % 
+
+Написать код применяющий данные в новых полях
+
+2.	Завести объект «Шунт» («Делитель»)
+У шунта будут характеристики 
+«название» (серийный номер) шунта
+Номинальное сопротивление (сопротивление на «малом» токе)
+Номинальный ток (верхняя граница рабочего  тока)
+таблица с зависимостью сопротивления от тока (заданного в долях от номинального тока)
+Методы возвращающие
+ «название» (серийный номер) шунта
+Номинальное сопротивление (сопротивление на малом токе)
+текущее значение сопротивления (с учетом силы тока в процентах от номинального)
