--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ TODO список
 «название» (серийный номер) шунта
 Номинальное сопротивление (сопротивление на «малом» токе)
 Номинальный ток (верхняя граница рабочего  тока)
-таблица с зависимостью сопротивления от тока (заданного в долях от номинального тока)
+таблица с зависимостью сопротивления от тока (заданного в процентах от номинального тока)
 Методы возвращающие
  «название» (серийный номер) шунта
 Номинальное сопротивление (сопротивление на малом токе)
