--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ TODO список
 «название» (серийный номер) шунта
 Номинальное сопротивление (сопротивление на «малом» токе)
 Номинальный ток (верхняя граница рабочего  тока)
+Предельный ток (ток больше которого нельзя подавать на шунт, на будущее)
 таблица с зависимостью сопротивления от тока (заданного в процентах от номинального тока)
 Методы возвращающие
  «название» (серийный номер) шунта
