--- a/TODO
+++ b/TODO
@@ -1,8 +1,12 @@
 TODO список
-1.	Установить во вкладке Файл->Настройки->Расчеты
-Поиск основного тона		радиобокс 	Гц/% от частоты дискретизации
-Начальная частота   	[      ] Гц / % 
-Конечная частота     	[      ] Гц	 / % 
+
+1. Реализовать диапазон поиска основного тона
+
+Сделано:
+| Установить во вкладке Файл->Настройки->Расчеты
+| Поиск основного тона		радиобокс 	Гц/% от частоты дискретизации
+| Начальная частота   	[      ] Гц / % 
+| Конечная частота     	[      ] Гц	 / % 
 
 Написать код применяющий данные в новых полях
 
